# task-scheduler

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CNAME  ReadMe.md  annotated.html  annotated_dup.js  classes.html  dir_394abebdfb312828b667896893cd99e6.html  dir_394abebdfb312828b667896893cd99e6_dep.dot  dir_520250c7c0c84345b376eee5f738d93b.html  dir_520250c7c0c84345b376eee5f738d93b_dep.dot  dir_e62b80d9c07425f9ab99cde6c041e5b9.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  graph_legend.html  group__libtasksch.html  group__libtasksch.js  group__ltascsch__core.html  group__ltascsch__core.js  group__ltascsch__func.html  group__ltascsch__func.js  group__ltascsch__thread__objects.html  group__ltasksch__error.html  group__ltasksch__error.js  group__ltasksch__syncs.html  group__ltasksch__syncs.js  group__ltasksch__threads.html  group__ltasksch__threads.js  index.html  internal__structures_8h_source.html  menudata.js  modules.html  modules.js  (+18 more)
.github/workflows/: DocDeploy.yml  Linux.yml  Window.yml
docs/: CMakeLists.txt  Doxyfile.in  backcoverpage.tex  footer.tex  frontpage.tex  header.tex  stylized.sty
include/: taskSch.h
include/internal/: internal_structures.h  poolAllocator.h  queue.h  sch.h  time.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  enums_0.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
src/: heapify.c  poolAllocator.c  queue.c  sch.c  taskSch.c
src/unix/: thread.c  time.c
src/windows/: thread.c  time.c
test/: CMakeLists.txt
test/unit-test/: CMakeLists.txt  main.c
