FIND_PACKAGE( Doxygen )

IF(DOXYGEN_FOUND)
    MESSAGE(STATUS "Doxygen found: ${DOXYGEN_EXECUTABLE} -- ${DOXYGEN_VERSION}")

	SET(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR}/include)
	SET(DOXYGEN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/doxygen)
	SET(DOXYGEN_OUTPUT_LATEX_DIR ${CMAKE_CURRENT_BINARY_DIR}/latex)
	SET(DOXYGEN_INDEX_FILE ${DOXYGEN_OUTPUT_DIR}/xml/index.xml)
	SET(DOXYFILE_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
	SET(DOXYFILE_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)

	FIND_PACKAGE(LATEX)
	IF(LATEX_FOUND)
		IF(LUALATEX_FOUND)
			MESSAGE(STATUS "lualatex found - ${LUALATEX_COMPILER}")
		ENDIF()
		IF(BIBTEX_FOUND)
			MESSAGE(STATUS "bibtex found - ${BIBTEX_COMPILER}")
		ENDIF()
		IF(MAKEINDEX_FOUND)
			MESSAGE(STATUS "makeindex found - ${MAKEINDEX_COMPILER}")
		ENDIF()
	ELSE()
		MESSAGE(ERROR "No latex tools found!")
	ENDIF()

	#
	SET(LATEX_DOCUMENT ${DOXYGEN_OUTPUT_LATEX_DIR}/refman.pdf)
	SET(LATEX_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/header.tex)
	SET(LATEX_FOOTER ${CMAKE_CURRENT_SOURCE_DIR}/footer.tex)
	SET(LATEX_EXTRA_STYLESHEET "${CMAKE_CURRENT_SOURCE_DIR}/stylized.sty")
	SET(LATEX_EXTRA_FILES "${CMAKE_CURRENT_SOURCE_DIR}/front-page.png ${CMAKE_CURRENT_SOURCE_DIR}/frontpage.tex ${CMAKE_CURRENT_SOURCE_DIR}/backcoverpage.tex"
	)

	CONFIGURE_FILE(${DOXYFILE_IN} ${DOXYFILE_OUT} @ONLY)

	FILE(MAKE_DIRECTORY ${DOXYGEN_OUTPUT_DIR})


	ADD_CUSTOM_COMMAND(OUTPUT ${DOXYGEN_INDEX_FILE}
					COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE_OUT}
					MAIN_DEPENDENCY ${DOXYFILE_OUT} ${DOXYFILE_IN}
					COMMENT "Generating TaskScheduler Doxygen documentation"
					VERBATIM)

	ADD_CUSTOM_COMMAND( OUTPUT ${LATEX_DOCUMENT}
					COMMAND make -C ${DOXYGEN_OUTPUT_LATEX_DIR}
					MAIN_DEPENDENCY ${DOXYFILE_OUT} ${LATEX_HEADER} ${LATEX_FOOTER}
					COMMENT "Generating TaskScheduler Latex documentation"
	)

	ADD_CUSTOM_TARGET(Doxygen ALL DEPENDS ${DOXYGEN_INDEX_FILE})
	ADD_CUSTOM_TARGET(DoxygenLatex ALL DEPENDS ${LATEX_DOCUMENT} Doxygen)

ENDIF()
